--- a/dom/shopping-list.html
+++ b/dom/shopping-list.html
@@ -5,34 +5,18 @@
   <head>
     <meta charset="utf-8">
     <title>Shopping list example</title>
-    <style>
-      li {
-        margin-bottom: 10px;
-      }
-
-      li button {
-        font-size: 8px;
-        margin-left: 20px;
-        color: #666;
-      }
+    <style href='./shoping-list.css'>
     </style>
   </head>
   <body>
-
     <h1>My shopping list</h1>
-
     <div>
       <label for="item">Enter a new item:</label>
       <input type="text" name="item" id="item">
       <button>Add item</button>
     </div>
-
     <ul>
-
     </ul>
-
-    <script>
-
-    </script>
+    <script src='./shopping-list.js'/>
   </body>
 </html>
